--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -46,7 +46,7 @@ body {
     text-shadow:  -4px 4px 3px #2b2b2b;
 }
 .nav-container{
-    position: fixed;
+    position: absolute;
     top: 2rem;
     left: 20rem;
     width: 80vw;
